# GoveeOverHTTP

./: .gitignore  config.json  dash.html  goh.ai  main.py  pyproject.toml  readme.md  requirements.txt  run.sh
core/: utils.py
static/: app.js  dash.html  extras.css
